# OpenIngest

./: .gitignore  .openingest_doc_state.json  .openingest_image_cache.json  LICENSE  README.md  ingest-debug.jsonl  modifysql.sql  pyproject.toml
OpenIngest/: config.py  defaults.py  ingest.py  models.py  orchestrator.py  serve.py  utils.py
OpenIngest/chunking/: __init__.py  base.py  procedure.py  registry.py  semantic.py  structure.py  task_splitter.py  window.py
OpenIngest/db/: __init__.py  oracle_writer.py
OpenIngest/embed/: __init__.py  embedder.py
OpenIngest/enrich/: __init__.py  summarize.py  vision.py
OpenIngest/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py
OpenIngest/writers/: __init__.py  base.py  jsonl.py  oracle.py  oracle23ai.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/ui/: button.tsx  input.tsx  tabs.tsx  textarea.tsx
