[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "OpenIngest"
version = "0.1.0"
description = "Minimal FastAPI server for OpenIngest UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.9",
]

[project.scripts]
openingest-serve = "OpenIngest.serve:app"
